Swagger for Customers
